--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -17,11 +17,9 @@
         <!-- <h1>FINN</h1> -->
         <div class="navigationfirst">
         <ul class="aldoilea">
-            <li><a class=”active” href=”#”>Home</a></li>
-            <li><a href=”#”>About</a></li>
-            <li><a href=”#”>Services</a></li>
-            <li><a href=”#”>Contact</a></li>
-            <li><a href=”#”>Blog</a></li>
+            <li><a href=”#”><img src="/img/Facebook.png" alt="Snow"></a></li>
+            <li><a href=”#”><img src="/img/Youtube.png" alt="Snow"></a></li>
+            <li><a href=”#”><img src="/img/Twitter.png" alt="Snow"></a></li>
          </ul>
         </div>
     </nav>
