--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -29,11 +29,25 @@
                     <li><a href=”#”>carres</a></li>
                 </ul>
             </div>
-              <div class="line"></div>
+            <div class="line"></div>
 
         </nav>
     </div>
-  
+
+
+    <div class="parttho">
+        <h1>Finn</h1>
+
+        <ul class="parttho-buton">
+            <li class="design"><a href=”#”>Suport</a></li>
+            <li class="design"><a href=”#”>Partener</a></li>
+            <li class="design"><a href=”#”>carres</a></li>
+        </ul>
+
+
+
+
+    </div>
 
 
 </body>
