That is so nice

--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -8,14 +8,15 @@
     <link href="./style/Introduction.aboutus.design.css" rel="stylesheet">
     <title>About US</title>
 </head>
+
 <body>
     <div class="just-navigation">
         <nav>
             <div class="navigationfirst">
                 <ul class="aldoilea">
-                    <li><a href=”#”><img src="/img/Facebook.png" alt="Snow"></a></li>
-                    <li><a href=”#”><img src="/img/Youtube.png" alt="Snow"></a></li>
-                    <li><a href=”#”><img src="/img/Twitter.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger"   src="/img/Facebook.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger" src="/img/Youtube.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger" src="/img/Twitter.png" alt="Snow"></a></li>
                 </ul>
                 <ul class="altreilea ">
                     <li><a href=”#”>Suport</a></li>
@@ -39,6 +40,18 @@
         </nav>
     </div>
 
+<!-- aicia este scrisu de pe imagine   de inceput -->
+    <div class="container">
+        <img src="https://www.imaginetile.com/upload/home_page/1617813687rnd%20slide.jpg" alt="tile work" class="imge">
+
+<div class="conatienr-tho">
+
+
+        <h2 class="container-header">About US</h2>
+        <p class="container-paragraf">
+        </p>Home / About Us
+        </div>
+    </div>
 
 
 
@@ -46,7 +59,6 @@
 
 
 
-
-    
 </body>
+
 </html>
