--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navigationfirst">
                 <ul class="aldoilea">
-                    <li><a href=”#”><img class="imger"   src="/img/Facebook.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger" src="/img/Facebook.png" alt="Snow"></a></li>
                     <li><a href=”#”><img class="imger" src="/img/Youtube.png" alt="Snow"></a></li>
                     <li><a href=”#”><img class="imger" src="/img/Twitter.png" alt="Snow"></a></li>
                 </ul>
@@ -40,27 +40,57 @@
         </nav>
     </div>
 
-<!-- aicia este scrisu de pe imagine   de inceput -->
+    <!-- aicia este scrisu de pe imagine   de inceput -->
     <div class="container">
         <img src="https://www.imaginetile.com/upload/home_page/1617813687rnd%20slide.jpg" alt="tile work" class="imge">
 
-<div class="conatienr-tho">
+        <div class="conatienr-tho">
 
 
-        <h2 class="container-header">About US</h2>
-        <p class="container-paragraf">
-        </p>Home / About Us
+            <h2 class="container-header">About US</h2>
+            <p class="container-paragraf">
+            </p>Home / About Us
         </div>
     </div>
 
 
-<div class="that-is-contact">
+    <div class="that-is-contact">
 
-<p class="Nameboss">Fineas Luntars</p>
-<p>Number:<br> +734 545 2883 </p>
+        <p class="Nameboss">Fineas Luntars</p>
+        <p>Number:<br> +734 545 2883 </p>
 
 
-</div>
+    </div>
+
+    <!-- acuma ne apucam de  partea in acre ii scrie experienta 
+ -->
+
+    <div class="age-experience">
+
+        <div class="imgine-pluseperience">
+            <img src="https://img.freepik.com/free-vector/cute-handyman-holding-hammer-cartoon-vector-icon-illustration-people-construction-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4063.jpg?w=2000" alt="imgine pofile" class="imgprofile">
+
+            <div class="numberexperience">
+
+                <h1> 10+</h1>
+                <p>years experience</p>
+            </div>
+
+        </div>
+        <div class="aboutexpericence">
+
+            <p>About Us</p>
+            <h3>We 're providing the best
+                customer service</h3>
+            <div class="acestaesteacelamaiincetosat">
+                <p class="cont">we have over 25 years of experience in the field of tiles and tiles, we want to help as
+                    many as possible, if you are tired of unserious people</p>
+                <h3>Fineas Luntras</h3>
+
+            </div>
+        </div>
+
+    </div>
 
 
 
