new design and create Conntact ME :+1: :

--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style/Introduction.aboutus.design.css" rel="stylesheet">
-      <link rel="shortcut icon"
+    <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBcqC1Yxng3cTnS35ByvBuNUTbae228G2hFg&usqp=CAU"
         type="image/x-icon" />
     <title>About US</title>
@@ -71,7 +71,8 @@
     <div class="age-experience">
 
         <div class="imgine-pluseperience">
-            <img src="https://img.freepik.com/free-vector/cute-handyman-holding-hammer-cartoon-vector-icon-illustration-people-construction-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4063.jpg?w=2000" alt="imgine pofile" class="imgprofile">
+            <img src="https://img.freepik.com/free-vector/cute-handyman-holding-hammer-cartoon-vector-icon-illustration-people-construction-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-4063.jpg?w=2000"
+                alt="imgine pofile" class="imgprofile">
 
             <div class="numberexperience">
 
@@ -89,9 +90,9 @@
                 <p class="cont">we have over 25 years of experience in the field of tiles <br>
                     and tiles, we want to help as
                     many as possible, <br>if you are tired of unserious people</p>
-                    <br>
-                    <br>
-                    <br>
+                <br>
+                <br>
+                <br>
                 <h3>Fineas Luntras</h3>
 
             </div>
@@ -99,7 +100,35 @@
 
     </div>
 
+    <div class="contactme">
+        <div class="design"></div>
 
+        <div class="contactme-container">
+            <h2>Contact ME </h2>
+            <div class="email">
+
+                <h2>Email:
+                </h2>
+                <p class="contactme-paragtraf">
+                    LuntarsFineas23@gmail.com
+                </p>
+
+
+
+            </div>
+            <div class="contacme-phone">
+                <h2>Phone: Luntras Fineas</h2>
+                <p> +734 545 2883 </p>
+            </div>
+
+
+        </div>
+
+
+
+
+
+    </div>
 
 
 </body>
