--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -104,7 +104,7 @@
         <div class="design"></div>
 
         <div class="contactme-container">
-            <h2>Contact ME </h2>
+            <h2 class="h2contact">Contact ME </h2>
             <div class="email">
 
                 <h2>Email:
