aproape am terminat about us a fost foarte greu mai am de facut doar footer si gata :+1:
Co-Authored-By: ( Nechiforel David-Samuel ) NsdHSO  <37635083+nsdhso@users.noreply.github.com>

--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -102,6 +102,7 @@
 
     <div class="contactme">
         <div class="design"></div>
+        <div class="thoo">
 
         <div class="contactme-container">
             <h2 class="h2contact">Contact ME </h2>
@@ -123,7 +124,7 @@
 
 
         </div>
-
+        </div>
 
 
 
