--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -42,44 +42,29 @@
             <div class="dot"></div>
         </nav>
     </div>
-
     <!-- aicia este scrisu de pe imagine   de inceput -->
     <div class="container">
         <img src="https://www.imaginetile.com/upload/home_page/1617813687rnd%20slide.jpg" alt="tile work" class="imge">
-
         <div class="conatienr-tho">
-
-
             <h2 class="container-header">About US</h2>
             <p class="container-paragraf">
             </p>Home / About Us
         </div>
     </div>
-
-
     <div class="that-is-contact">
-
         <p class="Nameboss">Fineas Luntars</p>
         <p>Number:<br> +734 545 2883 </p>
-
-
     </div>
-
     <!-- acuma ne apucam de  partea in acre ii scrie experienta 
  -->
-
     <div class="age-experience">
-
         <div class="imgine-pluseperience">
             <img src="https://img3.stockfresh.com/files/w/wavebreak_media/m/71/2575566_stock-photo-portrait-of-a-builder-looking-around-while-holding-a-plan-against-a-white-background.jpg"
                 alt="imgine pofile" class="imgprofile">
-
             <div class="numberexperience">
-
                 <h1> 10+</h1>
                 <p>years experience</p>
             </div>
-
         </div>
         <div class="aboutexpericence">
 
@@ -94,44 +79,72 @@
                 <br>
                 <br>
                 <h3>Fineas Luntras</h3>
-
             </div>
         </div>
-
     </div>
-
     <div class="contactme">
         <div class="design"></div>
         <div class="thoo">
 
-        <div class="contactme-container">
-            <h2 class="h2contact">Contact ME </h2>
-            <div class="email">
-
-                <h2>Email:
-                </h2>
-                <p class="contactme-paragtraf">
-                    LuntarsFineas23@gmail.com
-                </p>
-
-
-
+            <div class="contactme-container">
+                <h2 class="h2contact">Contact ME </h2>
+                <div class="email">
+                    <h2>Email:
+                    </h2>
+                    <p class="contactme-paragtraf">
+                        LuntarsFineas23@gmail.com
+                    </p>
+                </div>
+                <div class="contacme-phone">
+                    <h2>Phone: Luntras Fineas</h2>
+                    <p> +734 545 2883 </p>
+                </div>
             </div>
-            <div class="contacme-phone">
-                <h2>Phone: Luntras Fineas</h2>
-                <p> +734 545 2883 </p>
-            </div>
-
-
         </div>
-        </div>
-
-
-
-
     </div>
+<footer>
+<div class="footer-part-1">
+<h1 class="name-web">Finn</h1>
+<p class="footer-Paragraf">Call us today </p>
+<h2 class="Numeber-footer">+ 734 545  2883</h2>
+
+</div>
+<div class="footer-part-2">
+
+<div class="Logo-and-link ">
+ <ul class="aldoilea">
+                    <li><a href=”#”><img class="imger" src="/img/Facebook.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger" src="/img/Youtube.png" alt="Snow"></a></li>
+                    <li><a href=”#”><img class="imger" src="/img/Twitter.png" alt="Snow"></a></li>
+                </ul>
+
+</div>
+
+
+<h2>DLO@2023  -WEB SITE-</h2>
+<h2> --PROJECT Daniel Luntars and team</h2>
+
+
+
+</div>
+
+
+
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
-
 </html>
