--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -59,11 +59,9 @@
  -->
     <div class="age-experience">
         <div class="imgine-pluseperience">
-            <img src="https://img3.stockfresh.com/files/w/wavebreak_media/m/71/2575566_stock-photo-portrait-of-a-builder-looking-around-while-holding-a-plan-against-a-white-background.jpg"
+            <img src="img/profilw.png"
                 alt="imgine pofile" class="imgprofile">
-            <div class="numberexperience">
-                <h1> 10+</h1>
-                <p>years experience</p>
+          
             </div>
         </div>
         <div class="aboutexpericence">
