--- a/introduction.Aboutus.html
+++ b/introduction.Aboutus.html
@@ -59,26 +59,25 @@
  -->
     <div class="age-experience">
         <div class="imgine-pluseperience">
-            <img src="img/profilw.png"
-                alt="imgine pofile" class="imgprofile">
-          
-            </div>
-        </div>
-        <div class="aboutexpericence">
+            <img src="img/profilw.png" alt="imgine pofile" class="imgprofile">
 
-            <p class="redparagarf">About Us</p>
-            <h3 class="name-title">We 're providing the best<br>
-                customer service</h3>
-            <div class="acestaesteacelamaiincetosat">
-                <p class="cont">we have over 25 years of experience in the field of tiles <br>
-                    and tiles, we want to help as
-                    many as possible, <br>if you are tired of unserious people</p>
-                <br>
-                <br>
-                <br>
-                <h3>Fineas Luntras</h3>
-            </div>
         </div>
+    </div>
+    <div class="aboutexpericence">
+
+        <p class="redparagarf">About Us</p>
+        <h3 class="name-title">We 're providing the best<br>
+            customer service</h3>
+        <div class="acestaesteacelamaiincetosat">
+            <p class="cont">we have over 10 years of experience in the field of tiles <br>
+                and tiles, we want to help as
+                many as possible, <br>if you are tired of unserious people</p>
+            <br>
+            <br>
+            <br>
+            <h3>Fineas Luntras</h3>
+        </div>
+    </div>
     </div>
     <div class="contactme">
         <div class="design"></div>
